--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <title>Classification-of-Animal-Associated-Viruses
   </title>
 </head>
+<h1>Project timeline</h1>
 <body>
-    <p> Project timeline </p>
+    <p> Gather all data - complete by Thursday </p>
+    <p> Build baseline model - complete by Thursday </p>
 </body>
 </html>
