--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Classification-of-Animal-Associated-Viruses
   </title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <h1>Project timeline</h1>
 <body>
