--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
   <title>Classification-of-Animal-Associated-Viruses
   </title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<h1>Project timeline</h1>
 <body>
-    <p> Gather all data - complete by Thursday </p>
-    <p> Build baseline model - complete by Thursday </p>
+    <h1>Project timeline</h1>
+    <ul>
+      <li>Gather all data - complete by Thursday</li>
+      <li>Build baseline model - complete by Thursday</li>
+    </ul>
 </body>
 </html>
