--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Classification of Animal-Associated Viruses</title>
   </title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://github.com/jmclaughlin712/jmclaughlin712.github.io/blob/main/styles.css">
 </head>
 <body>
     <h1>Project description</h1>
